# sand

./: CLAUDE.md  README.md  app.py  go.py  pyproject.toml  requirements.txt  run_app.py
debug/: extract_ball_logs_json.py  plot_ball_trajectory.py
src/: app.py  ball.py  event_generation.py  event_heap.py  events.py  grid.py  physics.py  simulation.py  wall.py
src/templates/: viewer.html
templates/: viewer.html
tests/: test_ball.py  test_ball_77_grid_transit.py  test_event_generation.py  test_event_heap.py  test_events.py  test_grid.py  test_overlapping_balls.py  test_physics.py  test_simulation.py  test_wall.py  test_wall_ball_distance.py
