[project]
name = "sand"
version = "0.1.0"
description = "Molecular dynamics simulation of granular media"
authors = [{name = "Sand Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pytest>=6.0.0",
    "flask>=2.0.0",
    "matplotlib>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]